# ab_testing_ecommerce

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb
src/: logistic.py  power.py  ztest.py
tests/: test_logistic.py  test_power.py  test_ztest.py
